# diffedit3

./: .gitattributes  .gitignore  .prettierignore  AUTHORS  CHANGELOG.md  Cargo.toml  README-DEV.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  rollup.config.js  vite.config.ts
.github/: FUNDING.yml  dependabot.yml
.github/scripts/: ubuntu_install_tauri_dependencies.sh
.github/workflows/: release.yml  test.yml
.pijul/: config
.pijul/changes/22/: RWOZ77VXXOVLWDUENT2WL3D5MO3YGLTUDGDFWPK6U2DMT5NWCAC.change
.pijul/changes/25/: 4SMMPD377WXVNCKPHJTELG2BCVHTRUD3D34JFHR6BVBHEECONQC.change
.pijul/changes/2H/: 4WTCZS6F4GFI7P6XNG5GA3DZM5WSOLFVDQE4NSK2Y6V6NI52BAC.change
.pijul/changes/2Q/: HTGU3PUEFHWNIFSUJF4MFJZWCYT367DBH6CEMFLMESU6GE6QLQC.change
.pijul/changes/32/: ALV5N5455UANEJMGFKKBO5ECDVONQAH6HJ73SSK5WBYQ5AYXIQC.change
.pijul/changes/3G/: OXHKMWPMWPXSY2LOLSPGO2MNVF3ZC7OAQELIDBZOZ3XDCV7UTQC.change
.pijul/changes/3T/: CVJFYSLSMEFWHXRCVPFWMTCAWHBNRVPS3LEZHBQTLMTJP44RHAC.change
.pijul/changes/54/: ZRDLEF44ENY7ZWFQ4UCRQDB3WKUOOG3ZNL7JZFJ4HDA62GFWQAC.change
.pijul/changes/57/: HKSISXVNA5ZNXO72D6UERFY26E5LRDR7S3A6TY6GEWWKFE2ZRAC.change
.pijul/changes/5G/: AIXAEJXZHAUE2KHISIDEKWCDKBKGLX3KL3LITBHORPMT324TIAC.change
.pijul/changes/5H/: KN7YTUX7ZM4G74H5V7L5SP7EDD6ONUP6O2XVZSRZISC2IZTYTQC.change
.pijul/changes/5J/: E7HSO5I2PVUINQSJJCYJYGPWYJHL4WP5BKLJEB3574OBVLW3JQC.change
.pijul/changes/5O/: 5VOANX2J6FZ2BYFPU3OWLVBEQQSQ3IJBUQKUAYP7ZJWBFPSXLAC.change
.pijul/changes/5Q/: IMP6TCV3QGXBSLYN5H2AISJOVOEW3L4777K7C4NSYTHO446WOAC.change
.pijul/changes/6A/: 4FQTHLBRG2TXZF7B6LRN55O67OHWRYQJOCTKMQLI2CO2YZMTYQC.change
.pijul/changes/6K/: 2POGMB2QFPECAGFG6GMO5L2BM7XXQINI42USFSQEO5XOROTBCQC.change
.pijul/changes/6S/: X2KVRVM4HQM4M5QLU4MU3CCOSADHWTQOOSQVB5VNXWV23EXMQAC.change
.pijul/changes/75/: GSPAZ4D6EEO6Q5SWUCYAWD2ZKDYDWMJMYG7T5XMOMOCBJMRSIAC.change
.pijul/changes/7H/: VYBL66TWFIPIQEZ4244ZJXA4OGZVDWTYLTL7YHNMUKYCKLT5JQC.change
.pijul/changes/7L/: GAHUAVYA3YHYVFRX7XJCC5CUBFTCKVPWG35ZRXLNNQZFGDGIWAC.change
.pijul/changes/7Q/: W5YSKGOHW674LAUMLZ3SPLLEZERE5CS7FEAVB6LMRFJ5HXSABQC.change
.pijul/changes/7V/: DA7F3SG64SWYLOQHI4DKDLMP7B36Z5NUM36WY2WSEREZFOJUQQC.change
.pijul/changes/A4/: CQ27AOYM2QD4I6TDMR5MHVYY35W2G2GYVR6DFX7LYKKB6IC34QC.change
.pijul/changes/A7/: 77PGVITZYA7QJ5KI3HW2PUIJEGYWSQGQ6SZH2FHZ2L7VRZU5ZQC.change  FDEJYRLA3JEQUGISZPC66QK637GC6EUJLC266YICT6PRARTP4QC.change
.pijul/changes/AC/: ELZZHJDS3QEWDGQVKKRQ7UWRDPJDPMYDIVFWL24AO6VT5MY47QC.change
.pijul/changes/AT/: HGCDUJ2P6KTU2SGA4FY5FOIAMT5JYZRK4UL6IDGMD4MZW75F6QC.change
.pijul/changes/B4/: VLTMWFTF7DYL65QE5J2INDGFGGK5UOOAAHTGF2FN2CZ4CO6C7QC.change
.pijul/changes/BG/: 3GTMSY25GR23RJPU42RJ45BIBWUGCKNPUWUPXWECKP3AJ5G4JQC.change
.pijul/changes/BS/: AIAN4H4SXMSHTH532ILVHYSFIBPCXWJI5YP2A4TX7Q66FOVPZAC.change
.pijul/changes/BT/: 7RC3QDYBQQBA7QYLTN4ZSV7IRFU5SLM6JHNC3IDJLPJMVU5UFAC.change
.pijul/changes/CR/: WAWA3JJL5J2GAE7QBYQ2JJZVETY6ARCGM67SES7O42DCWRRMOQC.change
.pijul/changes/CY/: 2PUFMHDISYOFZACLKSWMYSUB7ODEON4A6BULOR5TPFR5ZXO37AC.change
.pijul/changes/D2/: CC6DRQPITMUITWLS7VXV37SPIEBPMHLPEKY45BBQUUKB44SKUQC.change
.pijul/changes/DK/: YISPOTKCSLUBC7YZAGKQHUTULP4XQSDND5FJLR32L5NRAANAEQC.change
.pijul/changes/DW/: 2OAAJYHJPCPCCFJSXZIMTCOW7NJIBDG4P3D3BUBQKKSIQRJSHAC.change
.pijul/changes/E7/: NU5YLF7KGHNESAFYOP5K6DCVJMCVXZKMFMVB2MNNIE7FORRWCAC.change
.pijul/changes/EF/: WN2DWZ7X2VE6TPJTOLSM6ZZUKO333QAMXUIFDGRTFGSO3L525AC.change
.pijul/changes/EL/: CRCEGFNVPO7BWTZ7OBJNK4J5YIDNODQG24BMP4KHSPSAKJTSEQC.change
.pijul/changes/ES/: NGCT2L57MB67RD3WB6YPTZI3ZACBTT6PGAWHZT54RGM6KLLS4AC.change
.pijul/changes/FZ/: 5EH733OYMTB6BTGKOK42DJS4FG4OYPX3G44KHP6EWQNRHV6WQQC.change
.pijul/changes/GP/: TTCXAOHV6CXIWFSRJU6H7JVBNPYJG4AOHCOK5HCKLIJAW4FEGQC.change
.pijul/changes/H5/: BHY4LAMDSYHZNBUXWZHTUDWSAZS3PA4VVA4G2X4SQQDW5JVO5AC.change
.pijul/changes/HL/: L2UQ7F2IKJVBOUQGBEHY6CNAY2DK5EBCVJKM2CAA3VPGJO2Q7AC.change
.pijul/changes/HO/: CHO7DMOWL5XBEITM7G3RQS4ZHZQZWZHO34DOHGLZGU7W3COX7QC.change
.pijul/changes/IF/: CGJX24VFGVEZ63LBF62LBZI6R7G6QAGAMIUKENVMBE4HDLMVPQC.change
.pijul/changes/IL/: VKNGT52ICK6LDDF6ZTAWE4VLUI7JCWWA4YJV6PUQ3F52POHLZAC.change
.pijul/changes/IN/: OWIEHQZUKPIRVHQLTAGVIOS3R3MOTGIHVGCI4CQMEGFEFQGU7AC.change
.pijul/changes/IY/: SUZIUI26N57WVDNZ23XV2MYPBS47ZPP37KRWOAHAJ26YBLLZDAC.change
.pijul/changes/J3/: D5QFYXI35RREXYJQIYY2A5ADEKFLVDCMDTIG5XEPQIKFNDJJKAC.change
.pijul/changes/JO/: 3HHFG75TFAGCLSVDA62GOB2M34YNSZIAW5XVCK2CDJH3TE45WQC.change
.pijul/changes/K7/: YZYYMBYMZVXJROMUWFSMV6EU6A2B4NVZ6KZM3XOJWZL3K4RUDQC.change
.pijul/changes/KJ/: IQXYJMZA7YRWH6E4S647P3Z2MOTRQB2W27T67X5AQAFX7PHZDAC.change
.pijul/changes/KT/: YEJKVQDINR2O6ZSTLFWE55S4HMJ5QKKTOTNNZVSWAV7XGRGO7QC.change
.pijul/changes/KV/: 2DQZLB5GEB64Y7QWIXQU4YFDWTVO7IHCKLUJFRKS3LVWFVHHCAC.change
.pijul/changes/L4/: FJNPRVIHYTYN755TU7EPO2FFGLXX5PSV3J4LNMKBTNV5PYH62AC.change
.pijul/git/: db
.pijul/pristine/: db
backend-local-server/: Cargo.toml  TODO.md  TODOs.md  webapp-dist
backend-local-server/src/: fs.rs  lib.rs  local_server.rs  main.rs  types.rs
backend-tauri/: Cargo.toml  tauri.conf.json
backend-tauri/capabilities/: migrated.json
backend-tauri/icons/: icon.icns
backend-tauri/src/: main.rs
backend-warp/: Cargo.toml
backend-warp/src/: main.rs
diff-tool-logic/: Cargo.toml  TODOs.md
diff-tool-logic/src/: fs.rs  lib.rs
diff-tool-logic/testdata/left/src-tauri/diff-tool-logic/: Cargo.toml
src/: fs.rs  lib.rs  local_server.rs  main.ts  styles.css  types.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/diff-tool-logic/: Cargo.toml
src-tauri/src/: main.rs
testdata/: README.md
testdata/edit/: JJ-INSTRUCTIONS
testdata/left/: index.html
testdata/right/: CHANGELOG.md  JJ-INSTRUCTIONS
webapp/: .gitignore  TODOs.md  index.html  package.json  tsconfig.json  vite.config.ts
webapp/src/: backend_interactions.ts  diff_match_patch.d.ts  load_codemirror5_merge.ts  main.ts  merge_state.ts  styles.css  utils.ts
(+71 files in other folders)
