[workspace]
members = ["backend-tauri"]
default-members = ["."]

[workspace.package]
version = "0.6.1"  # Also update package.json and tauri.conf.json
rust-version = "1.85"  # Also update test.yml
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/ilyagr/diffedit3"

[package]
name = "diffedit3"
description = "Edit diffs in a 3-pane view"
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
include = ["/src", "/webapp/dist", "/*.md"]

[package.metadata.binstall]
# `cargo binstall` gets confused by the `v` before versions in archive name.
pkg-url = "{ repo }/releases/download/v{ version }/diffedit3-v{ version }-{ target }.{ archive-format }"

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
indexmap = { version = "2.11.4", features = ["serde"] }
open = "5.3.2"
parking_lot = "0.12.5"
poem = { version = "3.1.12", features = ["embed"] }
rust-embed = { version = "8.7.2" , features = ["include-exclude"] }
serde = { version = "1.0.228", features = ["serde_derive"] }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
toml = { version = "0.9.8" }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
walkdir = "2.5.0"

[dev-dependencies]
assert_matches = "1.5.0"
indoc = "2.0.6"
insta = { version = "1.43.2", features = [
    "redactions",
    "serde",
    "yaml",
    "json",
] }
itertools = "0.14"
tempfile = "3.23.0"
txtar = "1.0.0"
