[package]
name = "diffedit3"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
indexmap = { version = "2.2.3", features = ["serde"] }
poem = { version = "2.0.0", features = ["embed"] }
rust-embed = { version = "8.2.0" }
serde = { version = "1.0.196", features = ["serde_derive"] }
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "signal"] }
toml = { version = "0.8.10", features = ["indexmap"] }
tracing-subscriber = "0.3.18"
walkdir = "2.4.0"
webbrowser = "0.8.12"

[dev-dependencies]
insta = { version = "1.34.0", features = [
    "redactions",
    "serde",
    "yaml",
    "json",
] }
