[package]
name = "diffedit3"
description = "Edit diffs in a 3-pane view"
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
version = { workspace = true }
edition = { workspace = true }

include = [
   "../webapp/dist/**/*",
   "**/*.rs",
   "*.md"
]

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
indexmap = { version = "2.2.3", features = ["serde"] }
open = "5.0.1"
parking_lot = "0.12.1"
poem = { version = "2.0.0", features = ["embed"] }
rust-embed = { version = "8.2.0" }
serde = { version = "1.0.196", features = ["serde_derive"] }
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "signal"] }
toml = { version = "0.8.10", features = ["indexmap"] }
tracing-subscriber = "0.3.18"
walkdir = "2.4.0"

[dev-dependencies]
insta = { version = "1.34.0", features = [
    "redactions",
    "serde",
    "yaml",
    "json",
] }
