[package]
name = "diffedit3-gui"
version = { workspace = true }
edition = { workspace = true }

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["process-exit", "process-relaunch"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = { version = "2.2.6", features = ["serde"] }
clap = { version = "4.5.9", features = ["derive"] }
diffedit3 = { path = ".." }
parking_lot = "0.12.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
