[package]
name = "backend-warp"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
diff-tool-logic = { version = "0.1.0", path = "../diff-tool-logic" }
log = "0.4.20"
pretty_env_logger = "0.5.0"
rust-embed = { version = "8.2.0" }
serde = { version = "1.0.196", features = ["serde_derive"] }
tokio = { version = "1.36.0", features = ["full"] }
warp = "0.3.6"
warp-embed = "0.5.0"
