[package]
name = "diff-tool-logic"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
indexmap = { version = "2.2.3", features = ["serde"] }
itertools = "0.12.1"
maplit = "1.0.2"
serde = { version = "1.0.196", features = ["serde_derive"] }
thiserror = "1.0.57"
toml = { version = "0.8.10", features = ["indexmap"] }
walkdir = "2.4.0"

[dev-dependencies]
insta = { version = "1.34.0", features = [
    "redactions",
    "serde",
    "yaml",
    "json",
] }
